<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="luachon"
    android:title="@string/lua_chon" >

    <PreferenceCategory
        android:key="thongbaopin"
        android:title="@string/thongbaopin" >
    </PreferenceCategory>

    <truongtvd.baopinfunny.AdPreference android:layout="@layout/ad_layout" />

    <Preference
        android:key="pinyeu"
        android:title="@string/pin_yeu" />
    <Preference
        android:enabled="true"
        android:key="camsac"
        android:title="@string/camsac" />
    <Preference
        android:enabled="true"
        android:key="ngatsac"
        android:title="@string/ngatsac" />
    <Preference
        android:enabled="true"
        android:key="chonmau"
        android:title="@string/pin_day" />
    <Preference
        android:enabled="true"
        android:key="chonmaubutton"
        android:title="@string/chubutton" />
    <Preference
        android:enabled="true"
        android:key="test"
        android:title="@string/kiemtra" />

</PreferenceScreen>